# baro

./: .gitignore  Dockerfile  README.md  entrypoint.sh  info.toml  main.py  pyproject.toml  run.py  run_exp.py
src/baro/: __init__.py  _common.py  baro.py  time_series.py
